[package]
name = "Path_tracer"
version = "0.1.0"
authors = ["Emanuele Frasca <frasca.1836098@studenti.uniroma1.it>"]
description = "A simple path tracer written in Rust"
readme = "README.md"
repository = "https://github.com/noostale/path-tracer-in-rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
# rand_chacha = "0.3.1"
# rand_distr = "0.4.3"
# rand_pcg = "0.3.1"
# rand_seeder = "0.2.3"


[[bin]]
name = "main"
path = "main.rs"
